# vivo

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
tests/: test_ex01.py  test_vivo.py
tests/ex01/: test_ex01.py
tests/ex03/: test_super_heroes.py
tests/ex03/example/: log.csv
vivo/: config.py  get_an.py
vivo/ex01/: get_an.py
vivo/ex02/: app.py
vivo/ex03/: super_heroes.py
